[package]
name = "rust_experimental"
version = "0.7.0"

[lib]
name = "scores_rust"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
colorify = "0.2.3"
ndarray = "0.15.6"
num-traits = "0.2.19"
numpy = "0.21"
rayon = "1.10.0"
time = "0.3.36"

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "extension-module"]
